# siren-python

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  navigator.yaml  openapi.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/siren/: __init__.py  _client.py  api_keys.py  client.py  errors.py  events.py  reconciliation.py  types.py  webhooks.py
tests/: conftest.py  test_client.py  test_errors.py  test_events.py  test_resources.py  test_taxonomy.py  test_webhooks.py
