[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siren-sdk"
version = "0.1.0"
description = "Official Siren SDK for Python — affiliate and incentive tracking for any commerce stack."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Novatorius", email = "support@sirenaffiliates.com" }]
keywords = [
    "siren",
    "affiliate",
    "affiliate-marketing",
    "referral",
    "incentives",
    "rewards",
    "sdk",
    "webhooks",
    "ecommerce",
    "stripe",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24"]

[project.urls]
Homepage = "https://sirenaffiliates.com"
Repository = "https://github.com/Novatorius/siren-python"
Documentation = "https://sirenaffiliates.com"
Issues = "https://github.com/Novatorius/siren-python/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "respx>=0.21", "build>=1.0", "mypy>=1.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/siren"]

[tool.hatch.build.targets.sdist]
include = [
    "src/siren",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "openapi.yaml",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
strict = true
files = ["src/siren"]
